labs/docker/k8s/bigbluebutton-ns.yaml
# This file is just used to create the 'bigbluebutton' namespace in kubernetes
# kubectl create -f ./bigbluebutton-ns.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: bigbluebutton
