labs/docker/k8s/bbb-apps-akka.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bbb-apps-akka
    version: latest
  name: bbb-apps-akka
  namespace: bigbluebutton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbb-apps-akka
      version: latest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bbb-apps-akka
        version: latest
      name: bbb-apps-akka
    spec:
      containers:
      - env:
        - name: JAVA_OPTS
          value: -Dredis.host=redis
        image: bbb-apps-akka
        imagePullPolicy: IfNotPresent
        name: bbb-apps-akka
        resources: {}
        ports:
        - containerPort: 8080
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        kubernetes.io/hostname: aws0
