labs/docker/k8s/bbb-freeswitch.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bbb-freeswitch
    version: latest
  name: bbb-freeswitch
  namespace: bigbluebutton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbb-freeswitch
      version: latest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bbb-freeswitch
        version: latest
      name: bbb-freeswitch
    spec:
      containers:
      - image: bbb-freeswitch
        imagePullPolicy: IfNotPresent
        name: bbb-freeswitch
        resources: {}
        ports:
        - containerPort: 7443
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        kubernetes.io/hostname: aws0

---
apiVersion: v1
kind: Service
metadata:
  name: bbb-freeswitch
  namespace: bigbluebutton
  annotations:
    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
spec:
  ports:
  - name: http
    targetPort: 7443
    port: 7443
  selector:
    app: bbb-freeswitch

# How are docker-compose volumes implemented in k8s?
    # volumes:
    # - media-audio:/var/freeswitch/meetings
