labs/docker/k8s/bbb-kurento.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bbb-kurento
    version: latest
  name: bbb-kurento
  namespace: bigbluebutton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbb-kurento
      version: latest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bbb-kurento
        version: latest
      name: bbb-kurento
    spec:
      containers:
      - env:
        - name: KMS_STUN_IP
        # TODO: how to get this IP?
          value: "35.185.19.180"
        - name: KMS_STUN_PORT
          value: "3478"
        image: bbb-kurento
        imagePullPolicy: IfNotPresent
        name: bbb-kurento
        resources: {}
        ports:
        - containerPort: 8888
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        kubernetes.io/hostname: aws0

---
apiVersion: v1
kind: Service
metadata:
  name: bbb-kurento
  namespace: bigbluebutton
  annotations:
    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
spec:
  ports:
  - name: http
    targetPort: 8888
    port: 8888
  selector:
    app: bbb-kurento


# How are docker-compose volumes implemented in k8s?
    # volumes:
    #   - media-video:/var/kurento/recordings
    #   - media-screenshare:/var/kurento/screenshare
