labs/docker/k8s/bbb-nginx.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: bbb-freeswitch-nginx
    version: latest
  name: bbb-freeswitch-nginx
  namespace: bigbluebutton
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bbb-freeswitch-nginx
      version: latest
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: bbb-freeswitch-nginx
        version: latest
      name: bbb-freeswitch-nginx
    spec:
      containers:
      - env:
        - name: SERVER_DOMAIN
          value: (FQDN HERE)
        image: bbb-nginx
        imagePullPolicy: IfNotPresent
        name: bbb-freeswitch-nginx
        resources: {}
        ports:
        - containerPort: 80
          protocol: TCP
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      nodeSelector:
        kubernetes.io/hostname: aws0

---
apiVersion: v1
kind: Service
metadata:
  name: bbb-freeswitch-nginx
  namespace: bigbluebutton
  annotations:
    traefik.backend.circuitbreaker: "NetworkErrorRatio() > 0.5"
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: bbb-freeswitch-nginx

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bbb-freeswitch-nginx
  namespace: bigbluebutton
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: (FQDN HERE)
    http:
      paths:
      - path: /ws
        backend:
          serviceName: bbb-freeswitch-nginx
          servicePort: 80
